--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -112,6 +112,37 @@
 	font-size: 1rem;
 	color: #089047;
 }
+
+.slider {
+	position: relative;
+	width: 100%;
+	height: 500px;
+}
+.slider::after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.55);
+}
+.textContainer {
+	position: absolute;
+	z-index: 100;
+	bottom: 5%;
+	left: 3%;
+}
+.imageSlider {
+	width: 100%;
+}
+
+.slideTitle {
+	color: #fff !important;
+	text-transform: uppercase;
+	font-weight: 500;
+	font-size: 1rem;
+}
 .tv_title {
 	/* margin: 20px 10px; */
 	color: rgb(0, 0, 0);
