--- a/styles/Article.module.css
+++ b/styles/Article.module.css
@@ -247,6 +247,17 @@
 	margin-right: 10px;
 }
 
+.socialContainer {
+	padding-top: 10px;
+	width: 12%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+.social:hover {
+	transform: scale(1.2);
+	transition: 0.3s ease;
+}
 .articleTitle {
 	font-size: 3rem !important;
 }
