--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -176,7 +176,7 @@
 	position: relative;
 	background-color: rgba(8, 144, 71, 0.8);
 	color: white;
-	padding: 5% 10% 5% 10%;
+	padding: 2% 10% 2% 10%;
 	display: flex;
 	text-align: center;
 	flex-direction: column;
@@ -199,11 +199,11 @@
 .newsLetter h3 {
 	padding-bottom: 20px;
 	font-weight: 800;
-	font-size: 1.75rem;
+	font-size: 1.4rem;
 }
 
 .newsLetter p {
-	font-size: 1.2rem;
+	font-size: 1rem;
 	font-weight: 500;
 	padding: 10px;
 	width: 70%;
@@ -215,17 +215,21 @@
 	text-align: center;
 	border: none;
 	outline: none;
+	display: block;
+	width: 70%;
+	margin: 0 auto;
+	/* height: 5px !important */
+	/* padding: 3px auto !important; */
 }
 .newsLetter button {
 	background: white;
 	border: 2px solid white;
-
-	/* border: none; */
 	border-radius: 0;
-	padding: 8px 10px;
+	padding: 5px 7px;
 	color: #089047;
 	box-sizing: border-box;
 	font-weight: bold;
+	font-size: 0.8rem;
 }
 .newsLetter button:hover {
 	box-sizing: border-box;
