--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -91,18 +91,6 @@
 .smallVideo {
 	padding-bottom: 0 !important;
 }
-/* .environews_tv::after {
-	content: '';
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	position: absolute;
-	z-index: -1;
-	background-image: url('../public/assets/tvbg.jpg');
-	background-position: center;
-	background-size: cover;
-} */
 
 .environews_tv p {
 	color: rgb(0, 0, 0);
@@ -121,6 +109,7 @@
 	width: 100%;
 	height: 500px;
 }
+
 .slider::after {
 	content: '';
 	position: absolute;
@@ -139,6 +128,8 @@
 }
 .imageSlider {
 	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
 .slideTitle {
@@ -223,8 +214,6 @@
 	display: block;
 	width: 70%;
 	margin: 0 auto;
-	/* height: 5px !important */
-	/* padding: 3px auto !important; */
 }
 .newsLetter button {
 	border: 2px solid white;
@@ -252,7 +241,6 @@
 	transform: translateY(-50%);
 	font-size: 2rem;
 	color: white;
-	/* opacity :; */
 }
 
 .slideNext {
@@ -281,6 +269,9 @@
 	.video_responsive {
 		height: 500px;
 	}
+	.slider {
+		height: 450px;
+	}
 }
 
 @media screen and (max-width: 992px) {
@@ -290,6 +281,12 @@
 	.video_responsive {
 		height: 300px !important;
 	}
+	.slider h4 {
+		font-size: 1.2rem !important;
+	}
+	.slider h5 {
+		font-size: 1rem !important;
+	}
 }
 @media screen and (max-width: 960px) {
 	.breaking_news__title,
@@ -297,6 +294,9 @@
 	.opportunities p {
 		font-size: 0.8rem;
 		margin: 5px;
+	}
+	.slider {
+		height: 400px;
 	}
 }
 @media screen and (max-width: 760px) {
@@ -313,7 +313,7 @@
 	}
 	.newsLetter button {
 		font-size: 1rem !important;
-		padding: 10px;
+		padding: 8px;
 	}
 	.newsLetter input {
 		font-size: 1rem;
@@ -322,6 +322,9 @@
 	}
 	.newsLetter {
 		padding: 7% 3% 7% 3%;
+	}
+	.slider {
+		height: 380px;
 	}
 }
 
