--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -84,6 +84,8 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	height: 60vh;
+	overflow-y: scroll;
 }
 .smallVideo {
 	padding-bottom: 0 !important;
